fix: select multiple not visible scrollbar (#1702)

--- a/src/unfold/styles.css
+++ b/src/unfold/styles.css
@@ -278,7 +278,7 @@ table tr.selected th {
 
 .selector-chooseall,
 .selector-clearall {
-  @apply block border-t border-base-200 cursor-pointer py-2 text-center text-sm text-default;
+  @apply block border-t border-base-200 cursor-pointer py-2 text-center text-sm text-default dark:border-base-700;
 }
 
 .selector-clearall {
